--- a/Suctionator.csproj
+++ b/Suctionator.csproj
@@ -5,9 +5,20 @@
     <TargetFramework>net5.0</TargetFramework>
     <Authors>https://github.com/VinceGusmini</Authors>
     <Description>https://github.com/VinceGusmini/Suctionator</Description>
-    <Copyright>https://github.com/VinceGusmini/Suctionator</Copyright>
+    <Copyright></Copyright>
     <PackageId>Suctionator_V.1</PackageId>
     <PackageReleaseNotes />
+    <PackageProjectUrl>https://github.com/VinceGusmini/Suctionator</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/VinceGusmini/Suctionator</RepositoryUrl>
+  </PropertyGroup>
+
+  <PropertyGroup>
+	  <WebDriverPlatform>win32</WebDriverPlatform>
+	  <PublishChromeDriver>true</PublishChromeDriver>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>DEBUG;TRACE;_PUBLISH_CHROMEDRIVER</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
